--- a/src/Endpoint.Core/Endpoint.Core.csproj
+++ b/src/Endpoint.Core/Endpoint.Core.csproj
@@ -29,6 +29,7 @@
     <PackageReference Include="DotLiquid" Version="2.2.677" />
     <PackageReference Include="EnvDTE" Version="17.6.36389" />
     <PackageReference Include="Humanizer.Core" Version="2.14.1" />
+    <PackageReference Include="LibGit2Sharp" Version="0.27.2" />
     <PackageReference Include="MediatR" Version="12.0.0" />
     <PackageReference Include="Microsoft.Build.Locator" Version="1.6.1" />
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.7.0" />
