--- a/src/Endpoint.Core/Endpoint.Core.csproj
+++ b/src/Endpoint.Core/Endpoint.Core.csproj
@@ -64,6 +64,7 @@
   <ItemGroup>
     <Folder Include="Syntax\Namespaces\Factories\" />
     <Folder Include="Syntax\Namespaces\Strategies\" />
+    <Folder Include="Syntax\Structs\" />
     <Folder Include="Syntax\Properties\Factories\" />
     <Folder Include="Syntax\Statements\" />
     <Folder Include="Syntax\RouteHandlers\Create\" />
