--- a/src/Endpoint.Cli/Properties/launchSettings.json
+++ b/src/Endpoint.Cli/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "Endpoint.Cli": {
       "commandName": "Project",
-      "commandLineArgs": "ddd-app-create -n Dwight -a ToDo -d C:\\projects",
+      "commandLineArgs": "solution-create -n FreeTheGuys2 -t web -d C:\\projects",
       "environmentVariables": {
         "Endpoint:DefaultCommand": ""
       }
