--- a/src/Endpoint.Cli/Properties/launchSettings.json
+++ b/src/Endpoint.Cli/Properties/launchSettings.json
@@ -13,6 +13,13 @@
       "environmentVariables": {
         "Endpoint:DefaultCommand": ""
       }
+    },
+    "signalr-app-create": {
+      "commandName": "Project",
+      "commandLineArgs": "signalr-app-create -n HotlineBling -d C:\\projects",
+      "environmentVariables": {
+        "Endpoint:DefaultCommand": ""
+      }
     }
   }
 }
