add async events

--- a/src/Endpoint.Cli/Properties/launchSettings.json
+++ b/src/Endpoint.Cli/Properties/launchSettings.json
@@ -16,7 +16,7 @@
     },
     "signalr-app-create": {
       "commandName": "Project",
-      "commandLineArgs": "signalr-app-create -n HotlineBling -d C:\\projects",
+      "commandLineArgs": "signalr-app-create -n HotlineBling -d C:\\projects -l 4",
       "environmentVariables": {
         "Endpoint:DefaultCommand": ""
       }
