add code formatting

--- a/src/Endpoint.Cli/Properties/launchSettings.json
+++ b/src/Endpoint.Cli/Properties/launchSettings.json
@@ -20,6 +20,13 @@
       "environmentVariables": {
         "Endpoint:DefaultCommand": ""
       }
+    },
+    "class-create": {
+      "commandName": "Project",
+      "commandLineArgs": "class-create -n HotlineBling -d C:\\projects -l 4",
+      "environmentVariables": {
+        "Endpoint:DefaultCommand": ""
+      }
     }
   }
 }
