--- a/src/Endpoint.Cli/Properties/launchSettings.json
+++ b/src/Endpoint.Cli/Properties/launchSettings.json
@@ -30,7 +30,7 @@
     },
     "enum-create": {
       "commandName": "Project",
-      "commandLineArgs": "enum-create -n HotlineBling -d C:\\projects\\Endpoint\\src\\Endpoint.Cli\\ -l 4 -e Foo",
+      "commandLineArgs": "enum-create -n HotlineBling -d C:\\projects -e Drake:6 -l 4 -t int",
       "environmentVariables": {
         "Endpoint:DefaultCommand": ""
       }
