--- a/src/Endpoint.Cli/Properties/launchSettings.json
+++ b/src/Endpoint.Cli/Properties/launchSettings.json
@@ -28,9 +28,9 @@
         "Endpoint:DefaultCommand": ""
       }
     },
-    "udp-client-factory-interface-create": {
+    "enum-create": {
       "commandName": "Project",
-      "commandLineArgs": "udp-client-factory-interface-create -d C:\\projects -l 4",
+      "commandLineArgs": "enum-create -n HotlineBling -d C:\\projects -e Drake:6 -l 4 -t int",
       "environmentVariables": {
         "Endpoint:DefaultCommand": ""
       }
