--- a/src/Endpoint.Infrastructure/Endpoint.Infrastructure.csproj
+++ b/src/Endpoint.Infrastructure/Endpoint.Infrastructure.csproj
@@ -9,177 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="Templates\Angular\Services\Default\Spec.txt" />
-    <None Remove="Templates\BuildingBlocks\IO.Compression\BitVector8.txt" />
-    <None Remove="Templates\BuildingBlocks\IO.Compression\BoolType.txt" />
-    <None Remove="Templates\BuildingBlocks\IO.Compression\GuidType.txt" />
-    <None Remove="Templates\BuildingBlocks\IO.Compression\Int16Type.txt" />
-    <None Remove="Templates\BuildingBlocks\IO.Compression\Int32Type.txt" />
-    <None Remove="Templates\BuildingBlocks\IO.Compression\IPackable.txt" />
-    <None Remove="Templates\BuildingBlocks\IO.Compression\String255Type.txt" />
-    <None Remove="Templates\Catch2.txt" />
-    <None Remove="Templates\EditorConfig.txt" />
-    <None Remove="Templates\EsProj.txt" />
-    <None Remove="Templates\Lit\LitIndexHtml.txt" />
-    <None Remove="Templates\Lit\LitPackageJson.txt" />
-    <None Remove="Templates\Lit\LitTsConfigJson.txt" />
-    <None Remove="Templates\Lit\LitWebpackConfig.txt" />
-    <None Remove="Templates\ParsingStrategy.txt" />
-    <None Remove="Templates\ValueObject.txt" />
-    <None Remove="Templates\ValueType.txt" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <EmbeddedResource Include="Templates\Angular\Services\Default\Spec.txt" />
-    <EmbeddedResource Include="Templates\BuildingBlocks\IO.Compression\BitVector8.txt" />
-    <EmbeddedResource Include="Templates\BuildingBlocks\IO.Compression\BoolType.txt" />
-    <EmbeddedResource Include="Templates\BuildingBlocks\IO.Compression\GuidType.txt" />
-    <EmbeddedResource Include="Templates\BuildingBlocks\IO.Compression\Int16Type.txt" />
-    <EmbeddedResource Include="Templates\BuildingBlocks\IO.Compression\Int32Type.txt" />
-    <EmbeddedResource Include="Templates\BuildingBlocks\IO.Compression\IPackable.txt" />
-    <EmbeddedResource Include="Templates\BuildingBlocks\IO.Compression\String255Type.txt" />
-    <EmbeddedResource Include="Templates\BuildingBlocks\Kernel\DomainException.txt" />
-    <EmbeddedResource Include="Templates\BuildingBlocks\Kernel\InternalServerErrorObjectResult.txt" />
-    <EmbeddedResource Include="Templates\BuildingBlocks\Kernel\JsonErrorResponse.txt" />
-    <EmbeddedResource Include="Templates\Angular\app.component.spec.txt" />
-    <EmbeddedResource Include="Templates\Angular\app.component.txt" />
-    <EmbeddedResource Include="Templates\Angular\Components\App\Component.txt" />
-    <EmbeddedResource Include="Templates\Angular\Components\App\Html.txt" />
-    <EmbeddedResource Include="Templates\Angular\Components\App\Scss.txt" />
-    <EmbeddedResource Include="Templates\Angular\Components\App\Spec.txt" />
-    <EmbeddedResource Include="Templates\Angular\Components\Control\Component.txt" />
-    <EmbeddedResource Include="Templates\Angular\Components\Control\Html.txt" />
-    <EmbeddedResource Include="Templates\Angular\Components\Default\Component.txt" />
-    <EmbeddedResource Include="Templates\Angular\Components\Default\Html.txt" />
-    <EmbeddedResource Include="Templates\Angular\Components\Dialog\Component.txt" />
-    <EmbeddedResource Include="Templates\Angular\Components\Dialog\Html.txt" />
-    <EmbeddedResource Include="Templates\Angular\Components\Dialog\Scss.txt" />
-    <EmbeddedResource Include="Templates\Angular\Components\Domain\Component.txt" />
-    <EmbeddedResource Include="Templates\Angular\Components\Domain\Html.txt" />
-    <EmbeddedResource Include="Templates\Angular\Components\Domain\Scss.txt" />
-    <EmbeddedResource Include="Templates\Angular\Components\Domain\Spec.txt" />
-    <EmbeddedResource Include="Templates\Angular\Components\HubClientServiceConsumer\Component.txt" />
-    <EmbeddedResource Include="Templates\Angular\Components\HubClientServiceConsumer\Html.txt" />
-    <EmbeddedResource Include="Templates\Angular\Components\ListDetail\Component.txt" />
-    <EmbeddedResource Include="Templates\Angular\Components\ListDetail\Html.txt" />
-    <EmbeddedResource Include="Templates\Angular\Components\ListDetail\Scss.txt" />
-    <EmbeddedResource Include="Templates\Angular\Components\ListDetail\Spec.txt" />
-    <EmbeddedResource Include="Templates\Angular\Components\Detail\Component.txt" />
-    <EmbeddedResource Include="Templates\Angular\Components\Detail\Html.txt" />
-    <EmbeddedResource Include="Templates\Angular\Components\Detail\Scss.txt" />
-    <EmbeddedResource Include="Templates\Angular\Components\Detail\Spec.txt" />
-    <EmbeddedResource Include="Templates\Angular\Components\List\Spec.txt" />
-    <EmbeddedResource Include="Templates\Angular\Components\List\Scss.txt" />
-    <EmbeddedResource Include="Templates\Angular\Components\List\Html.txt" />
-    <EmbeddedResource Include="Templates\Angular\Components\List\Component.txt" />
-    <EmbeddedResource Include="Templates\Angular\component-store.txt" />
-    <EmbeddedResource Include="Templates\Angular\http-service.txt" />
-    <EmbeddedResource Include="Templates\Angular\Services\HubClientService\Spec.txt" />
-    <EmbeddedResource Include="Templates\Angular\SignalRAppMain.txt" />
-    <EmbeddedResource Include="Templates\Angular\main.txt" />
-    <EmbeddedResource Include="Templates\Angular\Services\HttpService\Service.txt" />
-    <EmbeddedResource Include="Templates\Angular\Services\HttpService\Spec.txt" />
-    <EmbeddedResource Include="Templates\Angular\Services\HubClientService\Service.txt" />
-    <EmbeddedResource Include="Templates\Api\AppSettings.txt" />
-    <EmbeddedResource Include="Templates\Api\DefaultConfigureServices.txt" />
-    <EmbeddedResource Include="Templates\Api\ConfigureServices.txt" />
-    <EmbeddedResource Include="Templates\Api\IdFile.txt" />
-    <EmbeddedResource Include="Templates\Api\LaunchSettings.txt" />
-    <EmbeddedResource Include="Templates\Api\MinimalAppSettings.txt" />
-    <EmbeddedResource Include="Templates\Api\DefaultProgram.txt" />
-    <EmbeddedResource Include="Templates\Api\Program.txt" />
-    <EmbeddedResource Include="Templates\Api\WebApplicationBuilder.txt" />
-    <EmbeddedResource Include="Templates\Api\WebApplication.txt" />
-    <EmbeddedResource Include="Templates\Application\Dto.txt" />
-    <EmbeddedResource Include="Templates\BuildingBlocks\Kernel\HttpGlobalExceptionFilter.txt" />
-    <EmbeddedResource Include="Templates\BuildingBlocks\Kernel\EntityFrameworkCoreExtensions.txt" />
-    <EmbeddedResource Include="Templates\BuildingBlocks\Kernel\ResponseBase.txt" />
-    <EmbeddedResource Include="Templates\BuildingBlocks\Messaging\Messaging.Udp\ConfigureServices.txt" />
-    <EmbeddedResource Include="Templates\BuildingBlocks\Messaging\Messaging.Udp\IUdpClientFactory.txt" />
-    <EmbeddedResource Include="Templates\BuildingBlocks\Messaging\Messaging.Udp\MessagingClient.txt" />
-    <EmbeddedResource Include="Templates\BuildingBlocks\Messaging\Messaging.Udp\ServiceBusMessageListener.txt" />
-    <EmbeddedResource Include="Templates\BuildingBlocks\Messaging\Messaging.Udp\ServiceBusMessageSender.txt" />
-    <EmbeddedResource Include="Templates\BuildingBlocks\Messaging\Messaging.Udp\UdpClientFactory.txt" />
-    <EmbeddedResource Include="Templates\BuildingBlocks\Messaging\Messaging\IMessagingClient.txt" />
-    <EmbeddedResource Include="Templates\BuildingBlocks\Messaging\Messaging\Internals\Observable.txt" />
-    <EmbeddedResource Include="Templates\BuildingBlocks\Messaging\Messaging\IServiceBusMessage.txt" />
-    <EmbeddedResource Include="Templates\BuildingBlocks\Messaging\Messaging\IServiceBusMessageListener.txt" />
-    <EmbeddedResource Include="Templates\BuildingBlocks\Messaging\Messaging\IServiceBusMessageSender.txt" />
-    <EmbeddedResource Include="Templates\BuildingBlocks\Messaging\Messaging\ReceiveRequest.txt" />
-    <EmbeddedResource Include="Templates\BuildingBlocks\Messaging\Messaging\ServiceBusMessage.txt" />
-    <EmbeddedResource Include="Templates\BuildingBlocks\Security\Security\AccessRight.txt" />
-    <EmbeddedResource Include="Templates\BuildingBlocks\Security\Security\Authentication.txt" />
-    <EmbeddedResource Include="Templates\BuildingBlocks\Security\Security\AuthorizationHeaderParameterOperationFilter.txt" />
-    <EmbeddedResource Include="Templates\BuildingBlocks\Security\Security\AuthorizeResourceOperationAttribute.txt" />
-    <EmbeddedResource Include="Templates\BuildingBlocks\Security\Security\ConfigureServices.txt" />
-    <EmbeddedResource Include="Templates\BuildingBlocks\Security\Security\IPasswordHasher.txt" />
-    <EmbeddedResource Include="Templates\BuildingBlocks\Security\Security\ITokenBuilder.txt" />
-    <EmbeddedResource Include="Templates\BuildingBlocks\Security\Security\ITokenProvider.txt" />
-    <EmbeddedResource Include="Templates\BuildingBlocks\Security\Security\Operations.txt" />
-    <EmbeddedResource Include="Templates\BuildingBlocks\Security\Security\PasswordHasher.txt" />
-    <EmbeddedResource Include="Templates\BuildingBlocks\Security\Security\ResourceOperationAuthorizationBehavior.txt" />
-    <EmbeddedResource Include="Templates\BuildingBlocks\Security\Security\ResourceOperationAuthorizationHandler.txt" />
-    <EmbeddedResource Include="Templates\BuildingBlocks\Security\Security\SecurityConstants.txt" />
-    <EmbeddedResource Include="Templates\BuildingBlocks\Security\Security\TokenBuilder.txt" />
-    <EmbeddedResource Include="Templates\BuildingBlocks\Security\Security\TokenProvider.txt" />
-    <EmbeddedResource Include="Templates\BuildingBlocks\Validation\ConfigureServices.txt" />
-    <EmbeddedResource Include="Templates\BuildingBlocks\Validation\ResponseBase.txt" />
-    <EmbeddedResource Include="Templates\BuildingBlocks\Validation\ValidationBehavior.txt" />
-    <EmbeddedResource Include="Templates\Catch2.txt" />
-    <EmbeddedResource Include="Templates\Console\EmptyProgram.txt" />
-    <EmbeddedResource Include="Templates\Console\HttpClientExtensions.txt" />
-    <EmbeddedResource Include="Templates\Console\HttpClientFactory.txt" />
-    <EmbeddedResource Include="Templates\EditorConfig.txt" />
-    <EmbeddedResource Include="Templates\DddApp\Api\AppSettings.txt" />
-    <EmbeddedResource Include="Templates\DddApp\Core\ConfigureServices.txt" />
-    <EmbeddedResource Include="Templates\DddApp\Infrastructure\ConfigureServices.txt" />
-    <EmbeddedResource Include="Templates\DddApp\Infrastructure\DesignTimeDbContextFactory.txt" />
-    <EmbeddedResource Include="Templates\DddApp\Infrastructure\SeedData.txt" />
-    <EmbeddedResource Include="Templates\Domain\Entity.txt" />
-    <EmbeddedResource Include="Templates\Global\BicepFile.txt" />
-    <EmbeddedResource Include="Templates\Global\DeploySetupFile.txt" />
-    <EmbeddedResource Include="Templates\Global\GitIgnoreFile.txt" />
-    <EmbeddedResource Include="Templates\Infrastructure\EntityConfiguration.txt" />
-    <EmbeddedResource Include="Templates\Infrastructure\SeedData.txt" />
-    <EmbeddedResource Include="Templates\IntegrationTests\ApiTest.txt" />
-    <EmbeddedResource Include="Templates\IntegrationTests\WebApplicationFactory.txt" />
-    <EmbeddedResource Include="Templates\Lit\LitIndexHtml.txt" />
-    <EmbeddedResource Include="Templates\Lit\LitTsConfigJson.txt" />
-    <EmbeddedResource Include="Templates\Lit\LitWebpackConfig.txt" />
-    <EmbeddedResource Include="Templates\Lit\LitPackageJson.txt" />
-    <EmbeddedResource Include="Templates\ParsingStrategy.txt" />
-    <EmbeddedResource Include="Templates\Scss\Actions.txt" />
-    <EmbeddedResource Include="Templates\Scss\Brand.txt" />
-    <EmbeddedResource Include="Templates\Scss\Breakpoints.txt" />
-    <EmbeddedResource Include="Templates\Scss\Buttons.txt" />
-    <EmbeddedResource Include="Templates\Scss\Dialogs.txt" />
-    <EmbeddedResource Include="Templates\Scss\Field.txt" />
-    <EmbeddedResource Include="Templates\Scss\FormFields.txt" />
-    <EmbeddedResource Include="Templates\Scss\PanelHeading.txt" />
-    <EmbeddedResource Include="Templates\Scss\HeadingGroup.txt" />
-    <EmbeddedResource Include="Templates\Scss\Header.txt" />
-    <EmbeddedResource Include="Templates\Scss\Label.txt" />
-    <EmbeddedResource Include="Templates\Scss\PageScss.txt" />
-    <EmbeddedResource Include="Templates\Scss\Pills.txt" />
-    <EmbeddedResource Include="Templates\Scss\RouterLinkActive.txt" />
-    <EmbeddedResource Include="Templates\Scss\Table.txt" />
-    <EmbeddedResource Include="Templates\Scss\Textarea.txt" />
-    <EmbeddedResource Include="Templates\Scss\Title.txt" />
-    <EmbeddedResource Include="Templates\Scss\TitleBar.txt" />
-    <EmbeddedResource Include="Templates\Scss\Variables.txt" />
-    <EmbeddedResource Include="Templates\SpecFlow\DockerControllerHooks.txt" />
-    <EmbeddedResource Include="Templates\TestHeader.txt" />
-    <EmbeddedResource Include="Templates\SharedKernel\QueryableExtensions.txt" />
-    <EmbeddedResource Include="Templates\SharedKernel\ResponseBase.txt" />
-    <EmbeddedResource Include="Templates\ArtifactGenerationStrategy.txt" />
-    <EmbeddedResource Include="Templates\SyntaxGenerationStrategy.txt" />
-    <EmbeddedResource Include="Templates\Copyright.txt" />
-    <EmbeddedResource Include="Templates\Readme.txt" />
-    <EmbeddedResource Include="Templates\ValueType.txt" />
-    <EmbeddedResource Include="Templates\ValueObject.txt" />
-    <EmbeddedResource Include="Templates\EsProj.txt" />
-    <EmbeddedResource Include="Templates\Webpack.Config.txt" />
-    <EmbeddedResource Include="Templates\Verb.txt" />
+    <EmbeddedResource Include="Templates\**\*.txt" />
   </ItemGroup>
 
   <ItemGroup>
