--- a/src/Domains/DomainDrivenDesign/Endpoint.DomainDrivenDesign.Core/Endpoint.DomainDrivenDesign.Core.csproj
+++ b/src/Domains/DomainDrivenDesign/Endpoint.DomainDrivenDesign.Core/Endpoint.DomainDrivenDesign.Core.csproj
@@ -6,4 +6,7 @@
     <Nullable>enable</Nullable>
     <NoWarn>1998,4014,,SA1101,SA1600,,SA1200,SA1633,1591</NoWarn>
   </PropertyGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="8.0.1" />
+  </ItemGroup>
 </Project>
