--- a/src/Endpoint.DotNet/Endpoint.DotNet.csproj
+++ b/src/Endpoint.DotNet/Endpoint.DotNet.csproj
@@ -2,9 +2,20 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-    <NoWarn>1998,4014,,SA1101,SA1600,,SA1200,SA1633,1591</NoWarn>
+    <LangVersion>latest</LangVersion>
+    <Authors>Quinntyne Brown</Authors>
+    <Company>Allagi Consulting</Company>
+    <PackageTags>clean-architecture;source-generator;application-code;scaffolding</PackageTags>
+    <RepositoryUrl>https://github.com/QuinntyneBrown/Endpoint</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
+    <AssemblyVersion>1.0.12</AssemblyVersion>
+    <FileVersion>1.0.12</FileVersion>
+    <Version>1.0.12</Version>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
+    <PackageId>Quinntyne.Endpoint.Core</PackageId>
+    <Title>Endpoint Core</Title>
+    <NoWarn>1998;4014,SA1101,SA1600,SA1200,SA1633,SA1309</NoWarn>
   </PropertyGroup>
   <ItemGroup>
     <EmbeddedResource Include="Templates\**\*.txt" />
@@ -45,5 +56,9 @@
     <PackageReference Include="System.Reactive.Linq" Version="5.0.0" />
     <PackageReference Include="TextCopy" Version="6.2.1" />
     <PackageReference Include="TinyMapper" Version="3.0.3" />
-  </ItemGroup>  
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Endpoint.Core\Endpoint.Core.csproj" />
+  </ItemGroup>
 </Project>
