--- a/src/Endpoint.Cli/Endpoint.Cli.csproj
+++ b/src/Endpoint.Cli/Endpoint.Cli.csproj
@@ -18,7 +18,7 @@
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <UserSecretsId>06c49638-0786-4731-9c6b-3921161c01b5</UserSecretsId>
     <PackageId>Quinntyne.Endpoint.Cli</PackageId>
-    <NoWarn>1998;4014,SA1101,SA1600,SA1200,SA1633</NoWarn>
+    <NoWarn>1998;4014,SA1101,SA1600,SA1200,SA1633,SA1309</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
@@ -49,6 +49,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Endpoint.DotNet\Endpoint.DotNet.csproj" />
+    <ProjectReference Include="..\PhysicalTopologies\ModernWebAppPattern\Endpoint.ModernWebAppPattern.Core\Endpoint.ModernWebAppPattern.Core.csproj" />
   </ItemGroup>
 
   <ItemGroup>
