--- a/src/Domains/DomainDrivenDesign/Endpoint.DomainDrivenDesign.Core/Endpoint.DomainDrivenDesign.Core.csproj
+++ b/src/Domains/DomainDrivenDesign/Endpoint.DomainDrivenDesign.Core/Endpoint.DomainDrivenDesign.Core.csproj
@@ -9,4 +9,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Logging" Version="8.0.1" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Extensions\" />
+  </ItemGroup>
 </Project>
