--- a/src/Endpoint.DotNet/Endpoint.DotNet.csproj
+++ b/src/Endpoint.DotNet/Endpoint.DotNet.csproj
@@ -1,5 +1,5 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
-
+﻿<?xml version="1.0" encoding="utf-8"?>
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <LangVersion>latest</LangVersion>
@@ -17,17 +17,6 @@
     <Title>Endpoint Core</Title>
     <NoWarn>1998;4014,SA1101,SA1600,SA1200,SA1633,SA1309</NoWarn>
   </PropertyGroup>
-
-  <ItemGroup>
-    <EmbeddedResource Include="Templates\**\*.txt" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <None Include="..\..\README.md" Link="README.md">
-      <PackagePath>\</PackagePath>
-      <Pack>True</Pack>
-    </None>
-  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="12.0.0" />
