--- a/src/PhysicalTopologies/ModernWebAppPattern/Endpoint.ModernWebAppPattern.Core/Endpoint.ModernWebAppPattern.Core.csproj
+++ b/src/PhysicalTopologies/ModernWebAppPattern/Endpoint.ModernWebAppPattern.Core/Endpoint.ModernWebAppPattern.Core.csproj
@@ -10,4 +10,7 @@
     <ProjectReference Include="..\..\..\Domains\DomainDrivenDesign\Endpoint.DomainDrivenDesign.Core\Endpoint.DomainDrivenDesign.Core.csproj" />
     <ProjectReference Include="..\..\..\Endpoint.DotNet\Endpoint.DotNet.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Syntax\Expressions\RequestHandlers\" />
+  </ItemGroup>
 </Project>
