--- a/test/Endpoint.DotNet.UnitTests/Endpoint.DotNet.UnitTests.csproj
+++ b/test/Endpoint.DotNet.UnitTests/Endpoint.DotNet.UnitTests.csproj
@@ -39,4 +39,8 @@
     <ProjectReference Include="..\..\src\PhysicalTopologies\ModernWebAppPattern\Endpoint.ModernWebAppPattern.Core\Endpoint.ModernWebAppPattern.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Artifacts\" />
+  </ItemGroup>
+
 </Project>
