--- a/src/Endpoint.Cli/Properties/launchSettings.json
+++ b/src/Endpoint.Cli/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "Endpoint.Cli": {
       "commandName": "Project",
-      "commandLineArgs": "ddd-app-create -n TryTing -d C:\\projects"
+      "commandLineArgs": "project-add -t xunit -n HairPop.Models.Tests -d C:\\projects\\HairPop\\test"
     }
   }
 }
