--- a/src/Domains/DomainDrivenDesign/Endpoint.DomainDrivenDesign.Core/Endpoint.DomainDrivenDesign.Core.csproj
+++ b/src/Domains/DomainDrivenDesign/Endpoint.DomainDrivenDesign.Core/Endpoint.DomainDrivenDesign.Core.csproj
@@ -12,4 +12,7 @@
   <ItemGroup>
     <Folder Include="Extensions\" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\Endpoint.Core\Endpoint.Core.csproj" />
+  </ItemGroup>
 </Project>
