--- a/src/Endpoint.ModernWebAppPattern.Core/Endpoint.ModernWebAppPattern.Core.csproj
+++ b/src/Endpoint.ModernWebAppPattern.Core/Endpoint.ModernWebAppPattern.Core.csproj
@@ -7,7 +7,7 @@
     <NoWarn>1998,4014,,SA1101,SA1600,,SA1200,SA1633,1591</NoWarn>
   </PropertyGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\..\Domains\DomainDrivenDesign\Endpoint.DomainDrivenDesign.Core\Endpoint.DomainDrivenDesign.Core.csproj" />
+    <ProjectReference Include="..\..\..\Endpoint.DomainDrivenDesign.Core\Endpoint.DomainDrivenDesign.Core.csproj" />
     <ProjectReference Include="..\..\..\Endpoint.DotNet\Endpoint.DotNet.csproj" />
   </ItemGroup>
 </Project>
