--- a/tests/Endpoint.DotNet.UnitTests/Endpoint.DotNet.UnitTests.csproj
+++ b/tests/Endpoint.DotNet.UnitTests/Endpoint.DotNet.UnitTests.csproj
@@ -36,7 +36,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\src\Endpoint.DotNet\Endpoint.DotNet.csproj" />
-    <ProjectReference Include="..\..\src\PhysicalTopologies\ModernWebAppPattern\Endpoint.ModernWebAppPattern.Core\Endpoint.ModernWebAppPattern.Core.csproj" />
+    <ProjectReference Include="..\..\src\Endpoint.ModernWebAppPattern.Core\Endpoint.ModernWebAppPattern.Core.csproj" />
   </ItemGroup>
 
   <ItemGroup>
