--- a/tests/Endpoint.ModernWebAppPlatform.Core.Tests/Endpoint.ModernWebAppPlatform.Core.Tests.csproj
+++ b/tests/Endpoint.ModernWebAppPlatform.Core.Tests/Endpoint.ModernWebAppPlatform.Core.Tests.csproj
@@ -21,6 +21,6 @@
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\src\PhysicalTopologies\ModernWebAppPattern\Endpoint.ModernWebAppPattern.Core\Endpoint.ModernWebAppPattern.Core.csproj" />
+    <ProjectReference Include="..\..\src\Endpoint.ModernWebAppPattern.Core\Endpoint.ModernWebAppPattern.Core.csproj" />
   </ItemGroup>
 </Project>
