--- a/src/Endpoint.DotNet/Endpoint.DotNet.csproj
+++ b/src/Endpoint.DotNet/Endpoint.DotNet.csproj
@@ -19,6 +19,7 @@
   </PropertyGroup>
   <ItemGroup>
     <EmbeddedResource Include="Templates\**\*.txt" />
+    <None Include="README.md" Pack="true" PackagePath="\" />
   </ItemGroup>
   <ItemGroup>
     <Compile Remove="Syntax\TypeScript\**" />
