--- a/playground/DddSolution/DddSolution.csproj
+++ b/playground/DddSolution/DddSolution.csproj
@@ -10,9 +10,9 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\src\Endpoint\Endpoint.csproj" />
-    <ProjectReference Include="..\..\src\Endpoint.Cli\Endpoint.Cli.csproj" />
+    <ProjectReference Include="..\..\src\Endpoint.Engineering.Cli\Endpoint.Engineering.Cli.csproj" />
     <ProjectReference Include="..\..\src\Endpoint.DotNet\Endpoint.DotNet.csproj" />
-    <ProjectReference Include="..\..\src\Endpoint.ModernWebAppPattern\Endpoint.ModernWebAppPattern.csproj" />
+    <ProjectReference Include="..\..\src\Endpoint.Engineering\Endpoint.Engineering.csproj" />
   </ItemGroup>
 
   <ItemGroup>
