--- a/tests/Endpoint.DotNet.UnitTests/Endpoint.DotNet.UnitTests.csproj
+++ b/tests/Endpoint.DotNet.UnitTests/Endpoint.DotNet.UnitTests.csproj
@@ -32,7 +32,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\src\Endpoint.DotNet\Endpoint.DotNet.csproj" />
-    <ProjectReference Include="..\..\src\Endpoint.ModernWebAppPattern\Endpoint.ModernWebAppPattern.csproj" />
+    <ProjectReference Include="..\..\src\Endpoint.Engineering\Endpoint.Engineering.csproj" />
   </ItemGroup>
 
   <ItemGroup>
