--- a/tests/Endpoint.Engineering.Cli.UnitTests/Endpoint.Engineering.Cli.UnitTests.csproj
+++ b/tests/Endpoint.Engineering.Cli.UnitTests/Endpoint.Engineering.Cli.UnitTests.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.7.1" />
     <PackageReference Include="Moq" Version="4.16.1" />
+    <PackageReference Include="System.IO.Abstractions.TestingHelpers" Version="21.0.29" />
     <PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
