--- a/src/Endpoint.Engineering/Endpoint.Engineering.csproj
+++ b/src/Endpoint.Engineering/Endpoint.Engineering.csproj
@@ -7,6 +7,7 @@
     <NoWarn>1998,4014,,SA1101,SA1600,,SA1200,SA1633,1591</NoWarn>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Http" Version="8.0.1" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="8.0.1" />
   </ItemGroup>
   <ItemGroup>
