--- a/tests/Endpoint.Engineering.UnitTests/Endpoint.Engineering.UnitTests.csproj
+++ b/tests/Endpoint.Engineering.UnitTests/Endpoint.Engineering.UnitTests.csproj
@@ -22,6 +22,7 @@
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="Moq" Version="4.18.4" />
+    <PackageReference Include="System.IO.Abstractions.TestingHelpers" Version="21.0.29" />
   </ItemGroup>
 
   <ItemGroup>
