--- a/playground/EventDrivenMicroservices/output/EventDrivenDemo/src/Services/Inventory/Inventory.Api/Inventory.Api/appsettings.json
+++ b/playground/EventDrivenMicroservices/output/EventDrivenDemo/src/Services/Inventory/Inventory.Api/Inventory.Api/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefualtConnection": "Data Source=(LocalDb)\\MSSQLLocalDB;Initial Catalog=Orders;Integrated Security=SSPI;"
+    "DefualtConnection": "Data Source=(LocalDb)\\MSSQLLocalDB;Initial Catalog=Inventory;Integrated Security=SSPI;"
   }
 }
