--- a/src/Endpoint.Engineering.Cli/Endpoint.Engineering.Cli.csproj
+++ b/src/Endpoint.Engineering.Cli/Endpoint.Engineering.Cli.csproj
@@ -17,7 +17,7 @@
     <PackageReadmeFile>README.md</PackageReadmeFile>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <UserSecretsId>06c49638-0786-4731-9c6b-3921161c01b5</UserSecretsId>
-    <PackageId>Quinntyne.Endpoint.Cli</PackageId>
+    <PackageId>Quinntyne.Endpoint.Engineering.Cli</PackageId>
     <NoWarn>1998;4014,SA1101,SA1600,SA1200,SA1633,SA1309</NoWarn>
   </PropertyGroup>
 
